--- a/product-landing-page.html
+++ b/product-landing-page.html
@@ -166,7 +166,7 @@
                     <textarea name='message' id='message' class='message' placeholder='Enter your message'></textarea>
                 </section>
                 <section class='form-group submit-position'>
-                    <button type='submit' id='submit' class='submit-button'>Submit</button>
+                    <input type='submit' id='submit' value='Submit' class='submit-button'>
                 </section>
             </form>
         </div>
